gha/src/hu.bme.mit.mcmec.tricheckparser/src/main/java/hu/bme/mit/mcmec/tricheckparser/dsl/gen/TriCheckLitmusParser.java
// Generated from TriCheckLitmus.g4 by ANTLR 4.5.3
package hu.bme.mit.mcmec.tricheckparser.dsl.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TriCheckLitmusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINE_COMMENT=1, NUMBERS=2, COMMA=3, LCURLY=4, RCURLY=5, LBRACKET=6, RBRACKET=7, 
		LBRACE=8, RBRACE=9, SEMICOLON=10, ASSIGN=11, LOAD=12, STORE=13, MO=14, 
		EXISTS=15, RELEASE=16, RELAXED=17, ACQUIRE=18, SEQ_CST=19, RICHTEXT=20, 
		RICHER=21, WHITESPACE=22, NEWLINE=23;
	public static final int
		RULE_litmus = 0, RULE_preliminary = 1, RULE_variables = 2, RULE_threads = 3, 
		RULE_condition = 4, RULE_assignment = 5, RULE_thread = 6, RULE_line = 7;
	public static final String[] ruleNames = {
		"litmus", "preliminary", "variables", "threads", "condition", "assignment", 
		"thread", "line"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "','", "'{'", "'}'", "'['", "']'", "'('", "')'", "';'", 
		"'='", "'atomic_load_explicit'", "'atomic_store_explicit'", "'memory_order_'", 
		"'exists'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "LINE_COMMENT", "NUMBERS", "COMMA", "LCURLY", "RCURLY", "LBRACKET", 
		"RBRACKET", "LBRACE", "RBRACE", "SEMICOLON", "ASSIGN", "LOAD", "STORE", 
		"MO", "EXISTS", "RELEASE", "RELAXED", "ACQUIRE", "SEQ_CST", "RICHTEXT", 
		"RICHER", "WHITESPACE", "NEWLINE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TriCheckLitmus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TriCheckLitmusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class LitmusContext extends ParserRuleContext {
		public PreliminaryContext preliminary() {
			return getRuleContext(PreliminaryContext.class,0);
		}
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public ThreadsContext threads() {
			return getRuleContext(ThreadsContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TriCheckLitmusParser.EOF, 0); }
		public LitmusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_litmus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TriCheckLitmusListener ) ((TriCheckLitmusListener)listener).enterLitmus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TriCheckLitmusListener ) ((TriCheckLitmusListener)listener).exitLitmus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TriCheckLitmusVisitor ) return ((TriCheckLitmusVisitor<? extends T>)visitor).visitLitmus(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LitmusContext litmus() throws RecognitionException {
		LitmusContext _localctx = new LitmusContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_litmus);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			preliminary();
			setState(17);
			variables();
			setState(18);
			threads();
			setState(19);
			condition();
			setState(20);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreliminaryContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(TriCheckLitmusParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(TriCheckLitmusParser.NEWLINE, i);
		}
		public List<TerminalNode> RICHTEXT() { return getTokens(TriCheckLitmusParser.RICHTEXT); }
		public TerminalNode RICHTEXT(int i) {
			return getToken(TriCheckLitmusParser.RICHTEXT, i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(TriCheckLitmusParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(TriCheckLitmusParser.WHITESPACE, i);
		}
		public PreliminaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preliminary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TriCheckLitmusListener ) ((TriCheckLitmusListener)listener).enterPreliminary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TriCheckLitmusListener ) ((TriCheckLitmusListener)listener).exitPreliminary(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TriCheckLitmusVisitor ) return ((TriCheckLitmusVisitor<? extends T>)visitor).visitPreliminary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreliminaryContext preliminary() throws RecognitionException {
		PreliminaryContext _localctx = new PreliminaryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_preliminary);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE || _la==NEWLINE) {
				{
				{
				setState(22);
				_la = _input.LA(1);
				if ( !(_la==WHITESPACE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(27);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(35); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(28);
				match(RICHTEXT);
				setState(32);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					setState(29);
					match(WHITESPACE);
					}
					}
					setState(34);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(37); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==RICHTEXT );
			setState(39);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesContext extends ParserRuleContext {
		public TerminalNode LCURLY() { return getToken(TriCheckLitmusParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(TriCheckLitmusParser.RCURLY, 0); }
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(TriCheckLitmusParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(TriCheckLitmusParser.SEMICOLON, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(TriCheckLitmusParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(TriCheckLitmusParser.NEWLINE, i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(TriCheckLitmusParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(TriCheckLitmusParser.WHITESPACE, i);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TriCheckLitmusListener ) ((TriCheckLitmusListener)listener).enterVariables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TriCheckLitmusListener ) ((TriCheckLitmusListener)listener).exitVariables(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TriCheckLitmusVisitor ) return ((TriCheckLitmusVisitor<? extends T>)visitor).visitVariables(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE || _la==NEWLINE) {
				{
				{
				setState(41);
				_la = _input.LA(1);
				if ( !(_la==WHITESPACE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47);
			match(LCURLY);
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE || _la==NEWLINE) {
				{
				{
				setState(48);
				_la = _input.LA(1);
				if ( !(_la==WHITESPACE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(54);
				assignment();
				setState(55);
				match(SEMICOLON);
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITESPACE || _la==NEWLINE) {
					{
					{
					setState(56);
					_la = _input.LA(1);
					if ( !(_la==WHITESPACE || _la==NEWLINE) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					}
					setState(61);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(64); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LBRACKET );
			setState(66);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThreadsContext extends ParserRuleContext {
		public List<ThreadContext> thread() {
			return getRuleContexts(ThreadContext.class);
		}
		public ThreadContext thread(int i) {
			return getRuleContext(ThreadContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(TriCheckLitmusParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(TriCheckLitmusParser.NEWLINE, i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(TriCheckLitmusParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(TriCheckLitmusParser.WHITESPACE, i);
		}
		public ThreadsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_threads; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TriCheckLitmusListener ) ((TriCheckLitmusListener)listener).enterThreads(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TriCheckLitmusListener ) ((TriCheckLitmusListener)listener).exitThreads(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TriCheckLitmusVisitor ) return ((TriCheckLitmusVisitor<? extends T>)visitor).visitThreads(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ThreadsContext threads() throws RecognitionException {
		ThreadsContext _localctx = new ThreadsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_threads);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(68);
					_la = _input.LA(1);
					if ( !(_la==WHITESPACE || _la==NEWLINE) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					} 
				}
				setState(73);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RICHTEXT) {
				{
				{
				setState(74);
				thread();
				setState(78);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(75);
						_la = _input.LA(1);
						if ( !(_la==WHITESPACE || _la==NEWLINE) ) {
						_errHandler.recoverInline(this);
						} else {
							consume();
						}
						}
						} 
					}
					setState(80);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public TerminalNode EXISTS() { return getToken(TriCheckLitmusParser.EXISTS, 0); }
		public TerminalNode LBRACE() { return getToken(TriCheckLitmusParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(TriCheckLitmusParser.RBRACE, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(TriCheckLitmusParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(TriCheckLitmusParser.NEWLINE, i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(TriCheckLitmusParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(TriCheckLitmusParser.WHITESPACE, i);
		}
		public List<TerminalNode> RICHER() { return getTokens(TriCheckLitmusParser.RICHER); }
		public TerminalNode RICHER(int i) {
			return getToken(TriCheckLitmusParser.RICHER, i);
		}
		public List<TerminalNode> RICHTEXT() { return getTokens(TriCheckLitmusParser.RICHTEXT); }
		public TerminalNode RICHTEXT(int i) {
			return getToken(TriCheckLitmusParser.RICHTEXT, i);
		}
		public List<TerminalNode> NUMBERS() { return getTokens(TriCheckLitmusParser.NUMBERS); }
		public TerminalNode NUMBERS(int i) {
			return getToken(TriCheckLitmusParser.NUMBERS, i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(TriCheckLitmusParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(TriCheckLitmusParser.ASSIGN, i);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TriCheckLitmusListener ) ((TriCheckLitmusListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TriCheckLitmusListener ) ((TriCheckLitmusListener)listener).exitCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TriCheckLitmusVisitor ) return ((TriCheckLitmusVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_condition);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE || _la==NEWLINE) {
				{
				{
				setState(86);
				_la = _input.LA(1);
				if ( !(_la==WHITESPACE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(EXISTS);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE || _la==NEWLINE) {
				{
				{
				setState(93);
				_la = _input.LA(1);
				if ( !(_la==WHITESPACE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			match(LBRACE);
			setState(103);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(100);
					_la = _input.LA(1);
					if ( !(_la==WHITESPACE || _la==NEWLINE) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					} 
				}
				setState(105);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBERS) | (1L << ASSIGN) | (1L << RICHTEXT) | (1L << RICHER) | (1L << WHITESPACE))) != 0)) {
				{
				{
				setState(106);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBERS) | (1L << ASSIGN) | (1L << RICHTEXT) | (1L << RICHER) | (1L << WHITESPACE))) != 0)) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			match(RBRACE);
			setState(116);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(113);
					_la = _input.LA(1);
					if ( !(_la==WHITESPACE || _la==NEWLINE) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					} 
				}
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			setState(119);
			match(NEWLINE);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE || _la==NEWLINE) {
				{
				{
				setState(120);
				_la = _input.LA(1);
				if ( !(_la==WHITESPACE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(TriCheckLitmusParser.LBRACKET, 0); }
		public TerminalNode RICHTEXT() { return getToken(TriCheckLitmusParser.RICHTEXT, 0); }
		public TerminalNode RBRACKET() { return getToken(TriCheckLitmusParser.RBRACKET, 0); }
		public TerminalNode NUMBERS() { return getToken(TriCheckLitmusParser.NUMBERS, 0); }
		public List<TerminalNode> WHITESPACE() { return getTokens(TriCheckLitmusParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(TriCheckLitmusParser.WHITESPACE, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(TriCheckLitmusParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(TriCheckLitmusParser.NEWLINE, i);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TriCheckLitmusListener ) ((TriCheckLitmusListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TriCheckLitmusListener ) ((TriCheckLitmusListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TriCheckLitmusVisitor ) return ((TriCheckLitmusVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(LBRACKET);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE || _la==NEWLINE) {
				{
				{
				setState(127);
				_la = _input.LA(1);
				if ( !(_la==WHITESPACE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			match(RICHTEXT);
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE || _la==NEWLINE) {
				{
				{
				setState(134);
				_la = _input.LA(1);
				if ( !(_la==WHITESPACE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(140);
			match(RBRACKET);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE) {
				{
				{
				setState(141);
				match(WHITESPACE);
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(147);
			match(ASSIGN);
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE) {
				{
				{
				setState(148);
				match(WHITESPACE);
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(154);
			match(NUMBERS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThreadContext extends ParserRuleContext {
		public List<TerminalNode> RICHTEXT() { return getTokens(TriCheckLitmusParser.RICHTEXT); }
		public TerminalNode RICHTEXT(int i) {
			return getToken(TriCheckLitmusParser.RICHTEXT, i);
		}
		public TerminalNode LBRACE() { return getToken(TriCheckLitmusParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(TriCheckLitmusParser.RBRACE, 0); }
		public TerminalNode LCURLY() { return getToken(TriCheckLitmusParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(TriCheckLitmusParser.RCURLY, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(TriCheckLitmusParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(TriCheckLitmusParser.NEWLINE, i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(TriCheckLitmusParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(TriCheckLitmusParser.WHITESPACE, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TriCheckLitmusParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TriCheckLitmusParser.COMMA, i);
		}
		public ThreadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_thread; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TriCheckLitmusListener ) ((TriCheckLitmusListener)listener).enterThread(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TriCheckLitmusListener ) ((TriCheckLitmusListener)listener).exitThread(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TriCheckLitmusVisitor ) return ((TriCheckLitmusVisitor<? extends T>)visitor).visitThread(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ThreadContext thread() throws RecognitionException {
		ThreadContext _localctx = new ThreadContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_thread);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(RICHTEXT);
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE || _la==NEWLINE) {
				{
				{
				setState(157);
				_la = _input.LA(1);
				if ( !(_la==WHITESPACE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(163);
			match(LBRACE);
			setState(187); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(165);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(164);
					match(COMMA);
					}
				}
